--- a/dashboard/templates/dashboard/concept_detail.html
+++ b/dashboard/templates/dashboard/concept_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ concept.title }} - MasteryForge{% endblock %}
+{% block title %}{{ concept.title }} - KinderForge{% endblock %}
 
 {% block content %}
 <div class="card">
