--- a/dashboard/templates/dashboard/student_dashboard.html
+++ b/dashboard/templates/dashboard/student_dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Student Dashboard - MasteryForge{% endblock %}
+{% block title %}Student Dashboard - KinderForge{% endblock %}
 
 {% block content %}
 <div class="card">
