--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - MasteryForge{% endblock %}
+{% block title %}Login - KinderForge{% endblock %}
 
 {% block content %}
 <div class="card" style="max-width: 500px; margin: 3rem auto;">
