--- a/dashboard/templates/dashboard/learning_session.html
+++ b/dashboard/templates/dashboard/learning_session.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Learning Session - MasteryForge{% endblock %}
+{% block title %}Learning Session - KinderForge{% endblock %}
 
 {% block content %}
 <div class="card" style="max-width: 900px; margin: 1.5rem auto;">
