--- a/dashboard/templates/dashboard/parent_student_config.html
+++ b/dashboard/templates/dashboard/parent_student_config.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Configure Student - MasteryForge{% endblock %}
+{% block title %}Configure Student - KinderForge{% endblock %}
 
 {% block content %}
 <div class="card" style="max-width: 900px; margin: 1.5rem auto;">
