Fix double popup problems
Signed-off-by: David Mulder <dmulder@samba.org>

--- a/dashboard/templates/dashboard/learning_session.html
+++ b/dashboard/templates/dashboard/learning_session.html
@@ -127,7 +127,12 @@
         }
     };
 
+    let quizShown = false;
     const showQuiz = () => {
+        if (quizShown) {
+            return;
+        }
+        quizShown = true;
         if (videoStage) {
             videoStage.remove();
         }
